# fastapi-lambda-test

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
dockerfile/: Dockerfile  Dockerfile_lambda
initdb.d/: initsdb.sh
sql_scripts/: create_tables.sql
src/: main.py
src/core/: config.py
src/crud/: crud.py
src/db/: database.py
src/models/: models.py
src/module1/: function1_1.py  function1_2.py
src/module2/: function2_1.py  function2_2.py
src/service/: batch.py
tests/: conftest.py  test_sql.py  unitest1.py
