[tool.poetry]
name = "demo-app"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "module1", from ="src"},
    {include = "module2", from ="src"},
    {include = "core", from ="src"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydifact = "^0.1.6"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
